--- a/src/main/resources/templates/users/show.html
+++ b/src/main/resources/templates/users/show.html
@@ -13,7 +13,7 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a th:href="@{/}">Home</a></li>
-                <li><a th:href="@{user}">Profile</a></li>
+                <!-- <li><a th:href="@{user}">Profile</a></li> -->
                 <li class="active"><a href="#">Users</a></li>
                 <li><a href="/logout" th:if="${authenticated}">logout</a></li>
             </ul>
@@ -38,7 +38,7 @@
                 </tr>
             </tbody>
         </table>
-        <h2 th:if="${#lists.isEmpty(users)}">Nada here</h2>
+        <h2 th:if="${#lists.isEmpty(users)}">Nothing found</h2>
     </div>
 </div>
 </body>
